add project sectcion

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
       </div>
     </div>
 
+    <!-- more about me section -->
+
     <!-- skills/technologies section -->
     <div class="grid grid-cols-[30%_35%_35%] gap-8 border-b-4 px-56 py-28">
       <div class="relative col-span-3 row-start-1">
@@ -187,5 +189,108 @@
         </div>
       </div>
     </div>
+
+    <!-- project section -->
+    <div class="border-b-4 px-56 py-28 flex flex-col gap-2">
+      <div class="border-2 grid grid-cols-[5fr_2fr] grid-rows-[2fr_15fr_3fr]">
+        <!-- first project -->
+        <div class="border p-2.5 text-lg bg-background font-bold">
+          Trabahuso
+        </div>
+        <div class="border row-span-2 bg-background">
+          <img src="/project-demos/trabahuso-demo.gif" alt="" />
+        </div>
+        <div
+          class="border flex flex-col gap-2 col-start-2 row-start-1 p-2.5 row-span-2 bg-background-2"
+        >
+          <p class="text-background">
+            Data visualizations of scraped software developer jobs providing
+            insights to the software developer job market in the Philippines.
+          </p>
+          <div class="flex flex-wrap gap-2 justify-center">
+            <div class="bg-background p-1 flex gap-2 flex-wrap shrink-0 grow-0">
+              <img src="/typescript.svg" alt="logo of typescript" class="w-6" />
+              typescript
+            </div>
+            <div class="bg-background p-1 flex gap-2 flex-wrap shrink-0 grow-0">
+              <img src="/react.svg" alt="logo of react" class="w-6" />
+              react
+            </div>
+            <div class="bg-background p-1 flex gap-2 flex-wrap shrink-0 grow-0">
+              <img src="/express.svg" alt="logo of express" class="w-6" />
+              express.js
+            </div>
+            <div class="bg-background p-1 flex gap-2 flex-wrap shrink-0 grow-0">
+              <img src="/python.svg" alt="logo of python" class="w-6" />
+              python
+            </div>
+            <div class="bg-background p-1 flex gap-2 flex-wrap shrink-0 grow-0">
+              <img src="/selenium.svg" alt="logo of selenium" class="w-6" />
+              selenium
+            </div>
+            <div class="bg-background p-1 flex gap-2 flex-wrap shrink-0 grow-0">
+              <img src="/sqlite.svg" alt="logo of sqlite" class="w-6" />
+              sqlite
+            </div>
+            <div class="bg-background p-1 flex gap-2 flex-wrap shrink-0 grow-0">
+              <img src="/chakraui.svg" alt="logo of chakraui" class="w-6" />
+              chakra ui
+            </div>
+          </div>
+        </div>
+        <div
+          class="border bg-background p-2.5 flex justify-center items-start gap-2"
+        >
+          <div class="p-0.5 relative">
+            <p class="border relative z-10 bg-background p-0.5">
+              <a
+                href="https://github.com/kenBinary/trabahuso-frontend"
+                target="_blank"
+                class="relative z-10 flex"
+                >code
+                <img src="/new-window.svg" alt="" class="w-5" />
+              </a>
+            </p>
+
+            <div
+              class="absolute left-0 top-0 h-full w-full bg-background-2 translate-x-1 translate-y-1 z-0"
+            ></div>
+          </div>
+
+          <div class="p-0.5 relative">
+            <p class="border relative z-10 bg-background p-0.5">
+              <a
+                href="https://kenbinary.github.io/trabahuso-frontend/"
+                target="_blank"
+                class="relative z-10 flex"
+                >demo
+                <img src="/new-window.svg" alt="" class="w-5" />
+              </a>
+            </p>
+
+            <div
+              class="absolute left-0 top-0 h-full w-full bg-background-2 translate-x-1 translate-y-1 z-0"
+            ></div>
+          </div>
+
+          <div class="p-0.5 relative">
+            <p class="border relative z-10 bg-background p-0.5">
+              <a href="" target="_blank" class="relative z-10 flex"
+                >details
+                <img src="/new-window.svg" alt="" class="w-5" />
+              </a>
+            </p>
+
+            <div
+              class="absolute left-0 top-0 h-full w-full bg-background-2 translate-x-1 translate-y-1 z-0"
+            ></div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- contact section -->
+
+    <!-- education section -->
   </body>
 </html>
