add education section

--- a/index.html
+++ b/index.html
@@ -289,8 +289,67 @@
       </div>
     </div>
 
-    <!-- contact section -->
-
     <!-- education section -->
+    <div class="border-b-4 px-56 py-28">
+      <div class="flex relative border-2">
+        <div class="border shrink bg-background relative z-10">
+          <div class="text-6xl font-bold p-2.5 border-b-2">EDUCATION</div>
+          <div class="p-2.5 border-b-2 flex justify-center items-center">
+            <img
+              src="/education-graphic.svg"
+              alt="image of boy reading depicting education"
+              class="w-60"
+            />
+          </div>
+          <div class="p-2.5 flex justify-center">
+            <img src="/abstract-2.svg" alt="abstract image" />
+            <img src="/abstract-1.svg" alt="abstract image" />
+            <img src="/abstract-2.svg" alt="abstract image" />
+          </div>
+        </div>
+
+        <div
+          class="border shrink grow flex flex-col bg-background relative z-10"
+        >
+          <div class="flex-1 flex border-b">
+            <img
+              src="/university.svg"
+              alt="image of university building "
+              class="p-2.5 border-r"
+            />
+            <div class="p-2.5">
+              <div class="text-sm">College</div>
+              <div class="font-bold text-lg">
+                Bachelor of Science in Computer Science
+              </div>
+              <div>University of Mindanao, Davao City</div>
+              <div>2021-Present</div>
+            </div>
+          </div>
+
+          <div class="flex-1 flex">
+            <img
+              src="/university.svg"
+              alt="image of university building"
+              class="p-2.5 border-r"
+            />
+            <div class="p-2.5">
+              <div class="text-sm">Senior High School</div>
+              <div class="font-bold text-lg">
+                IT in Mobile App and Web Development
+              </div>
+              <div>STI College Malaybalay, Bukidnon</div>
+              <div>2019-2021</div>
+            </div>
+          </div>
+        </div>
+
+        <div
+          class="bg-background-2 translate-x-2 translate-y-2.5 z-0 w-full h-full absolute top-0"
+        ></div>
+      </div>
+    </div>
+
+    <!-- socials/contact section -->
   </body>
 </html>
