--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 
           <div class="flex-1 flex">
             <img
-              src="/university.svg"
+              src="/senior-high.svg"
               alt="image of university building"
               class="p-2.5 border-r"
             />
@@ -345,11 +345,92 @@
         </div>
 
         <div
-          class="bg-background-2 translate-x-2 translate-y-2.5 z-0 w-full h-full absolute top-0"
+          class="bg-background-2 translate-x-2 translate-y-2 z-0 w-full h-full absolute top-0"
         ></div>
       </div>
     </div>
 
     <!-- socials/contact section -->
+    <div class="border-b-4 px-56 py-28 flex flex-col gap-8">
+      <div class="border-2 col-span-2 flex flex-col z-10 relative">
+        <div
+          class="absolute left-0 top-0 h-full w-full bg-background-2 translate-x-2.5 translate-y-2.5 z-0"
+        ></div>
+
+        <div class="flex bg-background p-2.5 relative z-10">
+          <p class="text-7xl font-bold">Message me!</p>
+          <img src="/socials-section/hand.svg" alt="image of waving hand" />
+        </div>
+
+        <div class="text-2xl bg-background p-2.5 relative z-10">
+          <p>Feel free to message me on:</p>
+          <a href="mailto:kennethbecaro0@gmail.com" class="underline"
+            >kennethbecaro0@gmail.com</a
+          >
+        </div>
+      </div>
+
+      <div class="bg-background border-2 p-2.5 flex flex-wrap gap-8">
+        <a
+          href="https://www.linkedin.com/in/kjbdev/"
+          class="flex p-2 justify-between gap-2 border-2 flex-1 text-xl font-bold"
+          target="_blank"
+        >
+          <div class="flex gap-2 items-center">
+            <img
+              src="/socials-section/linkedin.svg"
+              alt="logo of linkedin"
+              class="w-10"
+            />
+            <p>linkedin</p>
+          </div>
+          <img
+            src="/new-window.svg"
+            alt="icon that indicates to open link in new window"
+            class="w-10"
+          />
+        </a>
+
+        <a
+          href="https://github.com/kenBinary"
+          class="flex p-2 justify-between gap-2 border-2 flex-1 text-xl font-bold"
+          target="_blank"
+        >
+          <div class="flex gap-2 items-center">
+            <img
+              src="/socials-section/github.svg"
+              alt="logo of github"
+              class="w-10"
+            />
+            <p>github</p>
+          </div>
+          <img
+            src="/new-window.svg"
+            alt="icon that indicates to open link in new window"
+            class="w-10"
+          />
+        </a>
+
+        <a
+          href="https://www.facebook.com/kjbDev/"
+          class="flex p-2 justify-between gap-2 border-2 flex-1 text-xl font-bold"
+          target="_blank"
+        >
+          <div class="flex gap-2 items-center">
+            <img
+              src="/socials-section/facebook.svg"
+              alt="logo of facebook"
+              class="w-10"
+            />
+            <p>facebook</p>
+          </div>
+          <img
+            src="/new-window.svg"
+            alt="icon that indicates to open link in new window"
+            class="w-10"
+          />
+        </a>
+      </div>
+    </div>
   </body>
 </html>
