--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>KjDev</title>
     <link rel="stylesheet" href="/src/style.css" />
+    <link rel="shortcut icon" href="/favicon-16x16.png" type="image/x-icon" />
   </head>
   <body class="bg-background">
     <!-- Intro section -->
